--- a/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/07-paragraph.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/07-paragraph.twig
@@ -19,6 +19,6 @@
 <p class="text--light">Integrate with files and databases, such as Oracle, SQL Server, and SAP HANA.</p>
 <hr>
 <strong>Text white</strong>
-<p class="bg--dark-dimgray text--white">Integrate with files and databases, such as Oracle, SQL Server, and SAP HANA.</p>
+<p class="bg--dark-gray text--white">Integrate with files and databases, such as Oracle, SQL Server, and SAP HANA.</p>
 <strong>Text black</strong>
 <p class="text--black">Integrate with files and databases, such as Oracle, SQL Server, and SAP HANA.</p>
