--- a/gulp-pattern-lab/scss/_styles-main.scss
+++ b/gulp-pattern-lab/scss/_styles-main.scss
@@ -12,6 +12,7 @@
 @import 'imports/variables';
 @import 'imports/icons-variables';
 @import 'imports/mixins';
+@import 'components/Grid-responsive-position';
 
 // Reset
 @import 'base/reset';
