--- a/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/09-blockquote.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/09-blockquote.twig
@@ -1,5 +1,3 @@
-<p>
-<div class="text--center">
-<blockquote style="font-family: LibreBaskerville; font-style: italic;"><p>"All the conversions procedures are very speedy and simple to do. And the product of this video conversion is supported by the iPod system requirements and configurations so you can enjoy watching your favorite movies, home movies, music videos and whatever it is you desire on your iPod player."</p></blockquote>
+<div style="padding: 50px;">
+<blockquote>All the conversions procedures are very speedy and simple to do. And the product of this video conversion is supported by the iPod system requirements and configurations so you can enjoy watching your favorite movies, home movies, music videos and whatever it is you desire on your iPod player.</blockquote>
 </div>
-</p>
