--- a/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/btn.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/00-base/00-global/btn.twig
@@ -1,6 +1,11 @@
 <br>
 <div>
-<a class="btn btn--radius btn--small font--nor" href=""> Get a Demo </a>
+<a class="btn" href=""> Apply </a>
+</div>
+<br>
+<br>
+<div>
+<a class="btn btn--radius btn--small" href=""> Get a Demo </a>
 </div>
 <br>
 <br>
@@ -9,6 +14,6 @@
 </div>
 <br>
 <br>
-<div class="bg--blue" style="padding: 20px;">
+<div class="bg--dark-gray" style="padding: 20px;">
 <a class="btn btn--large btn--transparent font--nor" href=""> Talk to an Expert </a>
 </div>
