--- a/gulp-pattern-lab/pattern-lab/source/_patterns/01-components/block-example/block-example.twig
+++ b/gulp-pattern-lab/pattern-lab/source/_patterns/01-components/block-example/block-example.twig
@@ -1,8 +1,8 @@
 <div class="block-example">
   <div class="container">
     <div class="block-example__grid">{{ blockExample.items }}</div>
-    {% if blockExample.image is not empty %}
+    {# {% if blockExample.image is not empty %}
       <span class="block-example__image">{{ blockExample.image }}</span>
-    {% endif %}
+    {% endif %} #}
   </div>
 </div>
