--- a/gulp-pattern-lab/scss/base/_table.scss
+++ b/gulp-pattern-lab/scss/base/_table.scss
@@ -1,36 +1,21 @@
 // Style table
-
 table {
-    margin-bottom: rem(15px);
-    width: 100%;
-  
-    @include susy-media(desktop) {
-      min-width: 100%;
-    }
+  margin-bottom: rem(15px);
+  width: 100%;
+
+  @media(min-width: $desktop) {
+    min-width: 100%;
   }
-  
-  td,
-  th {
-    border-bottom: rem(1px) solid $black;
-    min-width: rem(120px);
-    padding: rem(10px 18px);
-    vertical-align: top;
-  
-    tbody tr:first-of-type & {
-      border-top: rem(1px) solid $black;
-    }
-  }
-  
-  th {
-    font-weight: 700;
-  }
-  
-  .table-responsive {
-    margin-bottom: rem(15px);
-    overflow-x: auto;
-    width: 100%;
-  
-    table {
-      margin-bottom: 0;
-    }
-  }
+}
+
+td,
+th {
+  border: rem(1px) solid $dark-gray;
+  min-width: rem(120px);
+  padding: rem(10px 18px);
+  vertical-align: top;
+}
+
+th {
+  font-weight: 700;
+}
