--- a/gulp-pattern-lab/scss/layouts/_layout.scss
+++ b/gulp-pattern-lab/scss/layouts/_layout.scss
@@ -18,9 +18,6 @@ html {
   @include proximaNova();
   font-weight: normal;
   font-size: $base-font-size; // Don't modify static unit.
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
   line-height: $base-line-height;
   color: $text-color;
 }
@@ -30,8 +27,9 @@ body {
   @if $debug == true {
     @include show-breakpoints;
   }
-  // font-size: rem(18px);
-  // @include font-face(Gilroy, fonts/Gilroy/Gilroy-Regular, 400, normal);
-  // font-family: Gilroy;
-  // font-weight: 400;
+  font-size: rem(12px);
+
+  @include susy-media(tablet) {
+    font-size: rem(18px);
+  }
 }
